delete bug fix, threedot spacing fix

--- a/src/styles/ChatMessage.scss
+++ b/src/styles/ChatMessage.scss
@@ -64,6 +64,7 @@
 }
 .user-message {
   padding: 0.75rem 1rem;
+  padding-right: 1.5rem;
   border-radius: 10px;
   word-wrap: break-word;
   min-width: 65px;
@@ -135,7 +136,7 @@
   > .three-dot {
     position: absolute;
     top: 10px;
-    right: 0px;
+    right: .25rem;
     display: none;
     cursor: pointer;
     border-radius: 50%;
